implement coin ledger and bribes
